syntax = "proto3";

option csharp_namespace = "CountwareTraffic.Services.Companies.Grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Grpc/Protos/baseArea.proto";

package district;

service District {
	rpc GetDistrictById(GetDistrictRequest) returns (GetDistrictDetailResponse){}
    rpc GetDistricts(GetDistrictsRequest) returns (DistrictPagingResponse){}
    rpc ChangeDistrict(UpdateDistrictRequest) returns (baseArea.UpdateSuccessResponse){}
    rpc DeleteDistrict(DeleteDistrictRequest) returns (baseArea.DeleteSuccessResponse){}
    rpc AddDistrict(CreateDistrictRequest) returns (baseArea.CreateSuccessResponse){}
}

/*REQUESTS*/
message GetDistrictRequest {
	string DistrictId = 1;
}

message GetDistrictsRequest {
	string CityId = 1;
    baseArea.PagingRequest PagingRequest = 2;
}

message UpdateDistrictRequest{
    string DistrictId = 1;
    string Name = 2;
}

message DeleteDistrictRequest{
    string DistrictId = 1;
}

message CreateDistrictRequest{
    string CityId = 1;
    string Name = 2;
}

/*RESPONSES*/
message DistrictPagingResponse {
    int32 TotalCount = 1;
    int32 Page = 2;
    int32 Limit = 3;
    bool HasNextPage = 4;
    google.protobuf.Int32Value Next = 5;
    google.protobuf.Int32Value Prev = 6;
    repeated DistrictDetail DistrictDetails  = 7;
}

message GetDistrictDetailResponse {
    DistrictDetail DistrictDetail  = 1;
}

/*MODELS*/
message DistrictDetail
{
    string Id = 1;
    baseArea.Audit Audit = 2;
    string CityId = 3;
    string Name = 4;
}